dark mode fix and animtion

--- a/packages/ui/styles/style.css
+++ b/packages/ui/styles/style.css
@@ -16,3 +16,52 @@
 			'calt' 1;
 	}
 }
+
+@layer utilities {
+
+	@keyframes fadeInDown {
+		from {
+			opacity: 0;
+			transform: translateY(-20px);
+		}
+		to {
+			transform: translateY(0px);
+			opacity: 1;
+		}
+	}
+
+	@keyframes fadeIn {
+		from {
+			opacity: 0;
+		}
+		to {
+			opacity: 1;
+		}
+	}
+
+	.fadeInDown {
+		animation-name: fadeInDown;
+		/* opacity: 0; */
+	}
+
+	.fadeIn {
+		animation: fadeIn 1s forwards;
+		opacity: 0;
+	}
+
+	.animation-delay-1 {
+		animation-delay: 200ms;
+	}
+	.animation-delay-2 {
+		animation-delay: 500ms;
+	}
+	.animation-delay-3 {
+		animation-delay: 700ms;
+	}
+	.animation-delay-4 {
+		animation-delay: 1000ms;
+	}
+	.animation-delay-5 {
+		animation-delay: 1200ms;
+	}
+}
